fix bug: jump-container not displaying right

--- a/dracula.scss
+++ b/dracula.scss
@@ -148,7 +148,7 @@ tbody {
 }
 
 //scroll bar
-.jump-container .mod-side-operation__jump-to-top .icon-back:hover {
+.jump-container:hover .icon-back {
     background: #B694F5;
     color: #fff;
 }
